# embedded-graphics

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  EXAMPLES.md  LICENSE-MIT  MIGRATING-0.6-0.7.md  README.md  README.tpl  RELEASES.md  build.sh  build_target.sh  convert_1bpp.sh  filter-readme-embedded-graphics-core.sed  filter-readme-embedded-graphics.sed  filter-readme.sed  filter_readme.sed  font6x8_1bpp.raw  generate_drawing_examples.sh  generate_example_screenshots.sh  generate_examples_md.sh  generate_examples_montage.sh  generate_readmes.sh  index.html  justfile  readme.sh  release.toml  rust-toolchain.toml  rustfmt.examples.toml  rustfmt.nightly.toml
core/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
core/src/: common.rs  draw_target.rs  drawable.rs  image.rs  lib.rs  prelude.rs
core/src/draw_target/: clipped.rs  color_converted.rs  cropped.rs  mod.rs  translated.rs
core/src/geometry/: anchor.rs  dimensions.rs  mod.rs  point.rs  size.rs
core/src/image/: image_drawable.rs  mod.rs
core/src/iterator/: contiguous.rs  mod.rs
core/src/pixelcolor/: binary_color.rs  conversion.rs  gray_color.rs  mod.rs  rgb_color.rs  transparent_color.rs  web_colors.rs
core/src/primitives/: mod.rs
core/src/rectangle/: points.rs
core/src/text/: character_style.rs  mod.rs
embedded-graphics/: CHANGELOG.md  Cargo.toml  MIGRATING-0.5-0.6.md  MIGRATING-0.6-0.7.md  README.md  README.tpl
embedded-graphics-core/: CHANGELOG.md  Cargo.toml  README.md
embedded-graphics-core/src/: drawable.rs  image_drawable.rs  lib.rs
embedded-graphics-core/src/draw_target/: clipped.rs  cropped.rs  mod.rs  translated.rs
embedded-graphics-core/src/geometry/: mod.rs  point.rs  size.rs
embedded-graphics-core/src/iterator/: mod.rs  pixel.rs
embedded-graphics-core/src/rectangle/: mod.rs  points.rs
embedded-graphics/benches/: fonts.rs  image.rs  primitives.rs
embedded-graphics/data/: .raw  font24x32_1bpp.raw  font6x12_1bpp.raw  font8x12_1bpp.raw  font8x16_1bpp.raw  font8x8_1bpp.raw
embedded-graphics/src/: check_readme.rs  color.rs  context.rs  coord.rs  dev.rs  draw_target.rs  drawable.rs  lib.rs  mock_display.rs  pixel.rs  pixel_iterator.rs  pixelcolor.rs  prelude.rs  readme.rs  style.rs  transform.rs  unsignedcoord.rs
embedded-graphics/src/draw_target/: clipped.rs  clipped_draw_target.rs  convert_color.rs  cropped.rs  cropped_draw_target.rs  mod.rs  translated.rs
embedded-graphics/src/fonts/: font.rs  font12x16.rs  font24x32.rs  font6x12.rs  font6x6.rs  font6x8.rs  font8x12.rs  font8x16.rs  font8x8.rs  font_builder.rs  mod.rs  text.rs
embedded-graphics/src/geometry/: mod.rs  point.rs  size.rs
embedded-graphics/src/image/: image.rs  image16bpp.rs  image1bpp.rs  image8bpp.rs  image_bmp.rs  image_drawable.rs  image_file.rs  image_raw.rs  image_tga.rs  mod.rs  sub_image.rs
embedded-graphics/src/iterator/: contiguous.rs  mod.rs  pixel.rs
embedded-graphics/src/pixelcolor/: binary_color.rs  conversion.rs  gray_color.rs  luma_color.rs  mod.rs  rgb565.rs  rgb_color.rs  web_colors.rs
embedded-graphics/src/primitives/: DELETEME_line_joints_iter.rs  (+26 more)
embedded-graphics/tests/: chaining.rs  chessboard_raw.tga  tga-bw.tga  tga-rlw-bw.tga
simulator/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  generate_example_screenshots.sh
simulator/benches/: fonts.rs  hit_testing.rs  image.rs  line.rs  primitives.rs  primitives_fixed_point.rs  sort.rs
simulator/examples/: analog-clock.rs  bench.rs  bmp.rs  chaining.rs  clock.rs  debug-circle.rs  draw-target-adapters.rs  fill-context.rs  fill-macros.rs  fill.rs  fonts-context.rs  fonts.rs  hello-context.rs  hello-world.rs  hello.rs  image-bmp.rs  image-sub-image.rs  image-subimage.rs  image-tga.rs  input-handling.rs  line-intersection.rs  line-joints.rs  line-thickness.rs  offscreen.rs  pacman.rs  polyline-joints-2.rs  polyline-joints.rs  primitives-contains.rs  primitives-ellipse.rs  primitives-fill-macros.rs  primitives-fill.rs  primitives-polyline.rs  primitives-rounded-rectangle.rs  primitives-stroke-alignment.rs  primitives-stroke.rs  primitives-triangles.rs  progress.rs  rectangle-intersection.rs  scanline-intersection.rs  size.rs  (+15 more)
simulator/src/: check_readme.rs  display.rs  display_builder.rs  display_theme.rs  framebuffer.rs  lib.rs  main.rs  output_settings.rs  overdraw_display.rs  sim_pixel_color.rs  theme.rs  thick_c.rs  window.rs  window_builder.rs
tinybmp/: CHANGELOG.md  Cargo.toml  README.md  README.tpl  release.toml
tinybmp/src/: check_readme.rs  dynamic_bmp.rs  embedded_graphics.rs  header.rs  lib.rs  pixel.rs  pixels.rs  raw_bmp.rs  raw_pixels.rs
tinybmp/tests/: chessboard-8px-1bit.rs  chessboard-8px-24bit.rs  chessboard-8px-color-16bit.rs  chessboard-8px-colour-16bit.rs  coordinates.rs  embedded_graphics.rs
tinytga/: CHANGELOG.md  Cargo.toml  README.md  README.tpl
tinytga/benches/: embedded_graphics.rs  tga.rs
tinytga/src/: color_map.rs  dynamic_tga.rs  embedded_graphics.rs  footer.rs  header.rs  lib.rs  packet.rs  parse_error.rs  pixel.rs  pixels.rs  raw_packet.rs  raw_pixels.rs  raw_tga.rs  rle_packet.rs
tinytga/tests/: cbw8.rs  chequerboard-rle-topleft.tga  chequerboard-uncompressed-topleft.rs  chequerboard-uncompressed-topleft.tga  chessboard_4px_raw.rs  chessboard_4px_rle.rs  chessboard_4px_rle.tga  chessboard_rle.rs  chessboard_rle.tga  chessboard_uncompressed.rs  chessboard_uncompressed.tga  coordinates.rs  embedded_graphics.rs  error_color_map.tga  error_no_image_data.tga  error_truncated_image_data.tga  errors.rs  image_id.rs  image_id.tga  issue_216.rs  issue_216_compressed.tga  issue_216_uncompressed.tga  rust-rle-bw-bottomleft.rs  rust-rle-bw-bottomleft.tga  rust-rle-bw-topleft.tga  rust-uncompressed-bw-bottomleft.tga  rust-uncompressed-bw-topleft.tga  type10_16bpp_bl.tga  type10_16bpp_tl.tga  type10_24bpp_bl.tga  type10_24bpp_tl.tga  type11_bl.tga  type11_tl.tga  type1_16bpp_bl.tga  type1_16bpp_tl.tga  type1_bl.tga  type1_tl.tga  type2_16bpp_bl.tga  type2_16bpp_tl.tga  type2_bl.tga  (+9 more)
tools/bdf-to-mono/: Cargo.toml
tools/convert-fonts/: Cargo.toml
tools/generate-drawing-examples/: Cargo.toml
(+726 files in other folders)
