[package]
name = "embedded-graphics"
description = "Embedded graphics library for small hardware displays"
version = "0.7.0-alpha.3"
authors = ["James Waples <james@wapl.es>"]
repository = "https://github.com/embedded-graphics/embedded-graphics"
documentation = "https://docs.rs/embedded-graphics"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "/.circleci/",
    "/.github/",
	".gitignore",
	"convert_1bpp.sh",
]
edition = "2018"

[workspace]
members = ["core"]

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "embedded-graphics/embedded-graphics", branch = "master" }

[dependencies]
fixed = { version = "0.5.7", optional = true, default-features = false }
float-cmp = "0.8.0"
micromath = { version = "1.1.0", default-features = false }
embedded-graphics-core = { path = "core", version = "^0.2.0"}

# criterion is not listed as a dev-dependency to work around a problem with no_std compatibility
# and because dev-dependencies can't be optional
criterion = { version = "0.3.3", optional = true }

[dev-dependencies]
arrayvec = { version = "0.5.2", default-features = false }

[features]
default = []
nalgebra_support = [ "embedded-graphics-core/nalgebra_support" ]
fixed_point = [ "fixed" ]

[[bench]]
harness = false
name = "primitives"
required-features = ["criterion"]

[[bench]]
harness = false
name = "primitives_fixed_point"
required-features = ["criterion", "fixed_point"]

[[bench]]
harness = false
name = "fonts"
required-features = ["criterion"]

[[bench]]
harness = false
name = "image"
required-features = ["criterion"]

[[bench]]
harness = false
name = "contains"
required-features = ["criterion"]
