[package]
name = "embedded-graphics-core"
description = "Core traits and functionality for embedded-graphics"
version = "0.3.1"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
repository = "https://github.com/embedded-graphics/embedded-graphics"
documentation = "https://docs.rs/embedded-graphics-core"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "embedded-graphics/embedded-graphics", branch = "master" }

[dependencies]
az = "1.1"
nalgebra = { version = "0.23.0", optional = true, default-features = false }
byteorder = { version = "1.3.4", default-features = false }

[dev-dependencies]
embedded-graphics = { path = ".." }

[features]
default = []
nalgebra_support = [ "nalgebra" ]
