[package]
name = "embedded-graphics-core"
description = "Core traits and functionality for embedded-graphics"
version = "0.4.0"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/embedded-graphics/embedded-graphics"
documentation = "https://docs.rs/embedded-graphics-core"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "embedded-graphics/embedded-graphics", branch = "master" }

[dependencies]
az = "1.1"
nalgebra = { version = "0.30.1", optional = true, default-features = false }
defmt = { version = "0.3.2", optional = true}

[dev-dependencies]
embedded-graphics = { path = ".." }
arrayvec = { version = "0.7.2", default-features = false }

[features]
default = []
nalgebra_support = [ "nalgebra" ]
