[package]
name = "embedded-graphics-core"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.23.0", optional = true, default-features = false }
byteorder = { version = "1.3.4", default-features = false }

[dev-dependencies]
embedded-graphics = { path = "..", version = "0.7.0-alpha.1" }

[features]
default = []
nalgebra_support = [ "nalgebra" ]
