[package]
name = "embedded-graphics"
description = "Embedded graphics library for small hardware displays"
version = "0.6.0-beta.1"
authors = ["James Waples <james@wapl.es>"]
repository = "https://github.com/jamwaffles/embedded-graphics"
documentation = "https://docs.rs/embedded-graphics"
categories = ["embedded", "no-std"]
keywords = ["rtfm", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    ".circleci",
	".travis.yml",
	".gitignore",
	"convert_1bpp.sh",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
nalgebra = { version = "0.19.0", optional = true, default-features = false }

[features]
default = []
nalgebra_support = [ "nalgebra" ]

[dev-dependencies]
arrayvec = "0.5.1"
tinytga = { version = "0.3.1", features = [ "graphics" ] }

# The code examples in README.md use the simulator. To test these examples a
# dev-dependency to the simulator is added for the x86_64 target. Other no_std
# targets don't support running the simulator and adding this dependency for all
# targets would break CI.
[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
embedded-graphics-simulator = "0.2.0-beta.2"
