[package]
name = "embedded-graphics"
description = "Embedded graphics library for small hardware displays"
version = "0.7.0-alpha.1"
authors = ["James Waples <james@wapl.es>"]
repository = "https://github.com/jamwaffles/embedded-graphics"
documentation = "https://docs.rs/embedded-graphics"
categories = ["embedded", "no-std"]
keywords = ["rtfm", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    ".circleci",
	".travis.yml",
	".gitignore",
	"convert_1bpp.sh",
]
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[dependencies]
byteorder = { version = "1.3.4", default-features = false }
fixed = { version = "1.4.0", optional = true, default-features = false }
float-cmp = "0.8.0"
micromath = { version = "1.1.0", default-features = false }
nalgebra = { version = "0.23.0", optional = true, default-features = false }

[features]
default = []
nalgebra_support = [ "nalgebra" ]
fixed_point = [ "fixed" ]

[dev-dependencies]
arrayvec = { version = "0.5.2", default-features = false }
tinytga = "0.3.2"
