[package]
version = "0.2.1"
name = "embedded-graphics-simulator"
description = "Embedded graphics simulator"
authors = ["Byron Wasti <byron.wasti@gmail.com>", "James Waples <james@wapl.es>"]
repository = "https://github.com/jamwaffles/embedded-graphics/tree/master/simulator"
documentation = "https://docs.rs/embedded-graphics-simulator"
categories = ["embedded", "no-std"]
keywords = ["simulator", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    ".circleci",
    ".travis.yml",
    ".gitignore",
    "convert_1bpp.sh",
]

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[[bench]]
harness = false
name = "primitives"
[[bench]]
harness = false
name = "fonts"
[[bench]]
harness = false
name = "image"
required-features = ["bmp"]

[dependencies]
image = "0.23.0"
base64 = "0.12.0"
tinytga = { version = "0.3.2", features = [ "graphics" ] }

[dependencies.sdl2]
version = "0.32.2"
optional = true

[dependencies.embedded-graphics]
version = "0.6.0"

[dev-dependencies]
chrono = "0.4.10"
criterion = { version = "0.3.0", default-features = false }
tinybmp = { version = "0.2.2", features = [ "graphics" ] }

[features]
default = [ "with-sdl" ]
with-sdl = [ "sdl2" ]
