[package]
version = "0.2.0"
name = "embedded-graphics-simulator"
description = "Embedded graphics simulator"
authors = ["Byron Wasti <byron.wasti@gmail.com>", "James Waples <james@wapl.es>"]
repository = "https://github.com/jamwaffles/embedded-graphics/tree/master/simulator"
documentation = "https://docs.rs/embedded-graphics-simulator"
categories = ["embedded", "no-std"]
keywords = ["simulator", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    ".circleci",
    ".travis.yml",
    ".gitignore",
    "convert_1bpp.sh",
]

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[[bench]]
harness = false
name = "primitives"
[[bench]]
harness = false
name = "primitives_fixed_point"
required-features = ["fixed_point"]
[[bench]]
harness = false
name = "fonts"
[[bench]]
harness = false
name = "image"
required-features = ["bmp"]
[[bench]]
harness = false
name = "contains"

[dependencies]
image = "0.23.11"
tinytga = "0.3.2"
embedded-graphics = "0.7.0-alpha.1"

[dependencies.sdl2]
version = "0.34.3"
optional = true

[dev-dependencies]
chrono = "0.4.19"
criterion = { version = "0.3.3", default-features = false }
tinybmp = "0.2.3"

[features]
default = [ "with-sdl" ]
fixed_point = [ "embedded-graphics/fixed_point" ]
with-sdl = [ "sdl2" ]
