[package]
name = "tinybmp"
description = "No-std, low memory footprint BMP image loader"
version = "0.1.1"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
repository = "https://github.com/jamwaffles/embedded-graphics/tree/master/tinybmp"
documentation = "https://docs.rs/tinybmp"
categories = ["embedded", "no-std"]
keywords = ["graphics", "embedded", "bmp", "bitmap", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    ".travis.yml",
    ".gitignore",
]

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[dependencies.nom]
version = "5.1.0"
default-features = false

[dependencies.embedded-graphics]
version = "0.6.0-alpha.3"
optional = true

[features]
graphics = ["embedded-graphics"]
