[package]
name = "tinybmp"
description = "No-std, low memory footprint BMP image loader"
version = "0.2.3"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
repository = "https://github.com/jamwaffles/embedded-graphics/tree/master/tinybmp"
documentation = "https://docs.rs/tinybmp"
categories = ["embedded", "no-std"]
keywords = ["graphics", "embedded", "bmp", "bitmap", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    ".travis.yml",
    ".gitignore",
]

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[[test]]
name = "embedded_graphics"

[dependencies]
embedded-graphics = "0.7.0-alpha.1"

[dependencies.nom]
version = "6.0.0"
default-features = false
