[package]
name = "tinytga"
version = "0.3.2"
description = "No-std, low memory footprint TGA image loader"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"
repository = "https://github.com/jamwaffles/embedded-graphics/tree/master/tinytga"
documentation = "https://docs.rs/tinytga"
categories = ["embedded", "no-std"]
keywords = ["graphics", "embedded", "tga", "targa", "image"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
exclude = [
    ".travis.yml",
    ".gitignore",
]

[badges]
circle-ci = { repository = "jamwaffles/embedded-graphics", branch = "master" }

[dev-dependencies]
paste = "1.0"

[dependencies.nom]
version = "5.1.0"
default-features = false

[dependencies.embedded-graphics]
version = "=0.7.0-alpha.1"
