[package]
name = "bdf-to-mono"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
publish = false

[dependencies]
embedded-graphics = { path = "../../" }
png-target = { path = "../png-target" }
anyhow = "1.0.38"
bdf-parser = { version = "0.1.0" }
clap = { version = "3.0.0-beta.2", features = [ "derive" ] }
