[package]
name = "convert-fonts"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.38"
bdf-to-mono = { path = "../bdf-to-mono" }
image = { version = "0.23.12", default-features = false, features = ["png"] }
bdf-parser = { git = "https://github.com/embedded-graphics/embedded-bdf", rev = "ab27a8bcedcfbeb8125bea5d76b5038ba40d1f14" }
base64 = "0.13.0"
