[package]
name = "generate-drawing-examples"
version = "0.1.0"
authors = ["Ralf Fuest <mail@rfuest.de>"]
edition = "2021"
publish = false

[dependencies]
embedded-graphics = { path = "../../" }
png-target = { path = "../png-target/" }
tinytga = { git = "https://github.com/rfuest/tinytga.git", branch = "eg-0.9" }
regex = "1.4.3"
unindent = "0.1.7"
